modify score function

--- a/tbrain_svm_predict.ipynb
+++ b/tbrain_svm_predict.ipynb
@@ -47,6 +47,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75, 8)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#(tetfp_0050_17.values).shape = 246\n",
+    "#(tetfp_0050_18.values).shape = 75"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": true
@@ -158,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -171,11 +194,11 @@
     "    high = data.high.values\n",
     "\n",
     "    volume = data.volume.values\n",
-    "    ma5 = ma(5, close_)\n",
-    "    #ma10 = ma(10, close_)\n",
-    "    #ma20 = ma(20, close_)\n",
-    "    return_rate = diffRateGen(close_)\n",
-    "    red_black = high-low\n",
+    "    ma5 = np.array(ma(5, close_))\n",
+    "    #ma10 = np.array(ma(10, close_))\n",
+    "    #ma20 = np.array(ma(20, close_))\n",
+    "    return_rate = np.array(diffRateGen(close_))\n",
+    "    red_black = np.array(high-low)\n",
     "    candle = np.sign(close_ - open_)\n",
     "    x = np.array([volume, ma5, return_rate, red_black, candle])\n",
     "    return x"
@@ -183,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "train_x = np.concatenate((x_gen(tetfp_0050_18b), x_gen(tsharep_2317_18b), x_gen(tsharep_2330_18b)), axis=0).T\n",
-    "train_y = trend(tetfp_0050_18b.close.values)"
+    "train_y = np.array(trend(tetfp_0050_18b.close.values))"
    ]
   },
   {
